// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`host groups basic query 1`] = `
Object {
  "hostGroups": Object {
    "data": Array [
      Object {
        "count": 1,
        "group": Object {
          "account": "test",
          "created_on": "2023-04-12T11:11:00.000000Z",
          "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "modified_on": "2023-04-12T12:34:56.789000Z",
          "name": "group1",
          "org_id": "test",
        },
      },
    ],
    "meta": Object {
      "count": 1,
      "total": 1,
    },
  },
}
`;

exports[`host groups host filters by id 1`] = `
Object {
  "hostGroups": Object {
    "data": Array [],
    "meta": Object {
      "count": 0,
      "total": 0,
    },
  },
}
`;

exports[`host groups pagination limit + offset 1`] = `
Object {
  "hostGroups": Object {
    "data": Array [
      Object {
        "count": 1,
        "group": Object {
          "account": "hostGroupsTest",
          "created_on": "2023-04-12T11:11:00.000000Z",
          "id": "7c004532-13ff-4741-ab19-53bcb610490e",
          "modified_on": "2023-04-12T12:34:56.789000Z",
          "name": "baz",
          "org_id": "hostGroupsTest",
        },
      },
    ],
    "meta": Object {
      "count": 1,
      "total": 6,
    },
  },
}
`;

exports[`host groups pagination limit 1`] = `
Object {
  "hostGroups": Object {
    "data": Array [
      Object {
        "count": 2,
        "group": Object {
          "account": "hostGroupsTest",
          "created_on": "2023-04-12T11:11:00.000000Z",
          "id": "54ef7a4d-47fd-47f9-85e3-d60259e2d8f2",
          "modified_on": "2023-04-12T12:34:56.789000Z",
          "name": "prod",
          "org_id": "hostGroupsTest",
        },
      },
      Object {
        "count": 1,
        "group": Object {
          "account": "hostGroupsTest",
          "created_on": "2023-04-12T11:11:00.000000Z",
          "id": "7c004532-13ff-4741-ab19-53bcb610490e",
          "modified_on": "2023-04-12T12:34:56.789000Z",
          "name": "baz",
          "org_id": "hostGroupsTest",
        },
      },
    ],
    "meta": Object {
      "count": 2,
      "total": 6,
    },
  },
}
`;

exports[`host groups pagination ordering 1`] = `
Object {
  "hostGroups": Object {
    "data": Array [
      Object {
        "count": 1,
        "group": Object {
          "account": "test",
          "created_on": "2023-04-12T11:11:00.000000Z",
          "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
          "modified_on": "2023-04-12T12:34:56.789000Z",
          "name": "group1",
          "org_id": "test",
        },
      },
    ],
    "meta": Object {
      "count": 1,
      "total": 1,
    },
  },
}
`;
